Small front end correction on mobile

--- a/frontEnd/src/styles.css
+++ b/frontEnd/src/styles.css
@@ -50,7 +50,6 @@ app-menu {
     }
     .router {
         /* padding: 2em 2em 0; */
-        position: initial!important;
         width: 100%;
         padding: 5em 2em 0;
     }
